<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroPage"
    tools:ignore="MissingConstraints">
    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:orientation="vertical"
      tools:layout_editor_absoluteX="177dp"
      tools:layout_editor_absoluteY="63dp">
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="305dp"
        android:layout_height="341dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kc"
        android:contentDescription="@string/todo01" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="357dp"
        android:layout_height="87dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/hell0_there_i_am_Kalyan01"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp" />
    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/i_am_arimilli_mohan_kalyan_i_am_from_gvp_college_for_degree_and_pg_courses_my_hobbies_are_playing_cricket_watching_movies_badminton_web_surfing_i_am_form_west_godavari_district"
        android:autofillHints="" />

    <Button
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="20dp"
        android:id="@+id/fb"
        android:text="@string/load_facebook" />
  </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>