<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="111dp"
        tools:ignore="MissingConstraints" >

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="-28dp">

        <TextView
            android:id="@+id/programming_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/title01"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/myImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:text="@string/description01"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/myImage"
            app:layout_constraintTop_toBottomOf="@+id/programming_languages" />

        <Button
            android:id="@+id/visit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="72dp"
            android:layout_height="36dp"
            android:layout_below="@+id/description"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="68dp"
            android:background="@color/black"
            android:hint="click"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toTopOf="@+id/myImage" />

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="125dp"
            android:layout_height="106dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:contentDescription="@string/todo01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003"
            app:srcCompat="@drawable/app" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>